--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3400,6 +3400,7 @@ textarea.form-control {
 .portfolio-modal .modal-content {
     padding: 100px 0;
     min-height: 100%;
+    width: 100%;
     border: 0;
     border-radius: 0;
     background-clip: border-box;
@@ -3453,6 +3454,7 @@ textarea.form-control {
     opacity: .3;
 }
 
+
 .portfolio-modal .close-modal .lr {
     z-index: 1051;
     width: 1px;
@@ -3472,4 +3474,9 @@ textarea.form-control {
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
+}
+
+.modal-dialog {
+    width: 100%;
+    height: 100%;
 }
