--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3480,3 +3480,43 @@ textarea.form-control {
     width: 100%;
     height: 100%;
 }
+
+.img-fluid {
+    position: relative;
+    top: 0;
+    left: 25%
+}
+
+.play-btn {
+    position: relative;
+    top: -50%;
+    cursor: pointer;
+    transition: 0.5s;
+    opacity: 1;
+    left: -5%;
+    filter: invert(1)
+}
+
+.btn-circle {
+    width: 50%;
+    height: auto;
+    border-radius: 50%;
+    filter: brightness(30%);
+}
+
+#modal-row p {
+    font-size: 0.9em;
+}
+
+#modal-row br {
+    display: block;
+    /* makes it have a width */
+    content: "";
+    /* clears default height */
+    margin-top: -10px;
+    /* change this to whatever height you want it */
+}
+
+.video {
+    height: auto
+}
