--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3554,11 +3554,27 @@ textarea.form-control {
         display: inline-block;
         width: 49%
     }
+
+
+    .info_box p {
+        display: none
+    }
+
+    #section_team {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
 }
 
 @media only screen and (min-width: 1100px) {
     .img-fluid {
         width: 50%;
         height: 50%
+    }
+
+    #section_team {
+        padding-left: 20%;
+        padding-right: 20%;
     }
 }
