--- a/index.css
+++ b/index.css
@@ -505,6 +505,12 @@ h1.main, p.demos {
     animation-direction: alternate;
 }
 
+.agenda{
+    content:url(assets/img/agenda.JPG);
+    width: 100%;
+    height: 100%
+}
+
 @keyframes cf3FadeInOut {
     0% {
         opacity: 1;
